Handle direct guacd input events in recordings